tests/codegen/fail/object/derive_no_fields.rs
use coasys_juniper::GraphQLObject;

#[derive(GraphQLObject)]
struct Obj {}

fn main() {}
